Bug fix file path to render styleshett properly on Windows. Removed unnecessary closing input tag and shortend letter spacing to two decimals

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -42,7 +42,7 @@ body {
 .header {
   &__tertiary {
     @include header__third;
-    letter-spacing: -0.0423077rem;
+    letter-spacing: -0.04rem;
   }
   span {
     color: $textBlue;
